ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: bikeshopnina.com
      http:
        paths:
          - path: /central(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: central-app-service
                port:
                  number: 5000
          - path: /ns
            pathType: Prefix
            backend:
              service:
                name: ns-app-service
                port:
                  number: 5000
